tests/chainsaw/require-emptydir-requests-and-limits/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-emptydir-no-limits
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    emptyDir: {}
