tests/chainsaw/require-emptydir-requests-and-limits/good-pod-sizelimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-emptydir-sizelimit
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    emptyDir:
      sizeLimit: 100Mi
