tests/chainsaw/require-emptydir-requests-and-limits/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-emptydir-limits
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    resources:
      requests:
        ephemeral-storage: 100Mi
      limits:
        ephemeral-storage: 200Mi
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    emptyDir: {}
